tests/error/numeric_func_name.clac
// TEST: expect_compile_error
: 42 1 2 + ;
1 print quit
